--- a/index.html
+++ b/index.html
@@ -4,32 +4,31 @@
   <meta charset="UTF-8" />
   <title>Registro de EPI - Raízen Mundial</title>
   <style>
-    /* === ESTILOS MANTIDOS === */
-    *{box-sizing:border-box;margin:0;padding:0;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;}
-    body{background:#f4f7f6;color:#333;min-height:100vh;padding:20px;}
-    header{background:linear-gradient(90deg,#2e7d32,#388e3c);color:white;padding:20px;text-align:center;box-shadow:0 4px 10px rgba(0,0,0,0.2);margin-bottom:30px;}
-    header h1{font-size:2em;}
-    form{background:white;padding:20px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.1);max-width:600px;margin:0 auto 40px auto;}
-    label{display:block;margin-top:15px;font-weight:bold;color:#2e7d32;}
-    select,input[type="text"]{width:100%;padding:12px;margin-top:5px;border:1px solid #ccc;border-radius:8px;transition:all 0.3s;}
-    select:focus,input[type="text"]:focus{border-color:#388e3c;outline:none;box-shadow:0 0 5px rgba(56,142,60,0.5);}
-    button{margin-top:20px;width:100%;padding:14px;background:#388e3c;color:white;border:none;border-radius:10px;font-size:18px;cursor:pointer;transition:all 0.3s;}
-    button:hover{background:#2e7d32;}
-    #codigoSelecionado{margin-top:12px;font-weight:700;font-size:20px;color:#2e7d32;text-align:center;min-height:28px;}
-    .registros{max-width:950px;margin:0 auto 40px auto;display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;}
-    .card{background:white;padding:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.1);position:relative;transition:transform 0.2s,box-shadow 0.2s;}
-    .card:hover{transform:translateY(-5px);box-shadow:0 8px 20px rgba(0,0,0,0.15);}
-    .card p{margin-bottom:8px;}
-    .card .label{font-weight:bold;color:#388e3c;}
-    .deleteBtn{background:#e53935;color:white;border:none;padding:6px;border-radius:5px;cursor:pointer;position:absolute;width:50px;right:10px;bottom:15px;font-size:14px;transition:background 0.3s;}
-    .deleteBtn:hover{background:#b12b24;}
-    h2{text-align:center;color:#2e7d32;margin-bottom:15px;}
-    #searchCS{max-width:600px;margin:0 auto 30px auto;padding:12px;border-radius:8px;border:1px solid #ccc;display:block;}
-    table{width:90%;max-width:600px;margin:0 auto 40px auto;border-collapse:collapse;background:white;border-radius:12px;overflow:hidden;box-shadow:0 4px 12px rgba(0,0,0,0.1);}
-    th,td{border:1px solid #ddd;padding:12px;text-align:center;}
-    th{background:#2e7d32;color:white;}
-    tr:nth-child(even){background:#f9f9f9;}
-    @media (max-width:650px){.registros{grid-template-columns:1fr;}form,#searchCS,table{width:95%;}}
+    * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    body { background: #f4f7f6; color: #333; min-height: 100vh; padding: 20px; }
+    header { background: linear-gradient(90deg, #2e7d32, #388e3c); color: white; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.2); margin-bottom: 30px; }
+    header h1 { font-size: 2em; }
+    form { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); max-width: 600px; margin: 0 auto 40px auto; }
+    label { display: block; margin-top: 15px; font-weight: bold; color: #2e7d32; }
+    select, input[type="text"] { width: 100%; padding: 12px; margin-top: 5px; border: 1px solid #ccc; border-radius: 8px; transition: all 0.3s; }
+    select:focus, input[type="text"]:focus { border-color: #388e3c; outline: none; box-shadow: 0 0 5px rgba(56,142,60,0.5); }
+    button { margin-top: 20px; width: 100%; padding: 14px; background: #388e3c; color: white; border: none; border-radius: 10px; font-size: 18px; cursor: pointer; transition: all 0.3s; }
+    button:hover { background: #2e7d32; }
+    #codigoSelecionado { margin-top: 12px; font-weight: 700; font-size: 20px; color: #2e7d32; text-align: center; min-height: 28px; }
+    .registros { max-width: 950px; margin: 0 auto 40px auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
+    .card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); position: relative; transition: transform 0.2s, box-shadow 0.2s; }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
+    .card p { margin-bottom: 8px; }
+    .card .label { font-weight: bold; color: #388e3c; }
+    .deleteBtn { background:#e53935; color:white; border:none; padding:6px; border-radius:5px; cursor:pointer; position: absolute; width: 50px; right: 10px; bottom: 15px; font-size: 14px; transition: background 0.3s; }
+    .deleteBtn:hover { background: #b12b24; }
+    h2 { text-align: center; color: #2e7d32; margin-bottom: 15px; }
+    #searchCS { max-width: 600px; margin: 0 auto 30px auto; padding: 12px; border-radius: 8px; border: 1px solid #ccc; display: block; }
+    table { width: 90%; max-width: 600px; margin: 0 auto 40px auto; border-collapse: collapse; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+    th, td { border: 1px solid #ddd; padding: 12px; text-align: center; }
+    th { background: #2e7d32; color: white; }
+    tr:nth-child(even) { background: #f9f9f9; }
+    @media (max-width: 650px) { .registros { grid-template-columns: 1fr; } form, #searchCS, table { width: 95%; } }
   </style>
 </head>
 <body>
@@ -49,13 +48,11 @@
       <option value="luvas">Luvas</option>
       <option value="uniforme">Uniforme</option>
     </select>
-
     <label for="codigoEpi">Tamanho:</label>
     <select id="codigoEpi" required disabled>
       <option value="">Selecione o tipo de EPI primeiro</option>
     </select>
     <div id="codigoSelecionado"></div>
-
     <label for="motivo">Motivo:</label>
     <input type="text" id="motivo" placeholder="Digite o motivo do uso" required />
     <button type="submit">Registrar</button>
@@ -64,16 +61,11 @@
   <h2>Pesquisar por CS</h2>
   <input type="text" id="searchCS" placeholder="Digite o CS da pessoa" />
   <div class="registros" id="listaRegistros"></div>
-
   <h2>Resumo Semanal</h2>
-  <table id="tabelaSemanal">
-    <thead><tr><th>Tipo de EPI</th><th>Quantidade nesta semana</th></tr></thead>
-    <tbody></tbody>
-  </table>
+  <table id="tabelaSemanal"><thead><tr><th>Tipo de EPI</th><th>Quantidade nesta semana</th></tr></thead><tbody></tbody></table>
 
-  <!-- FIREBASE + APP -->
+  <!-- 🔥 FIREBASE CONFIG -->
   <script type="module">
-    // === CONFIGURAÇÃO FIREBASE ===
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
@@ -90,8 +82,7 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // === SEU CÓDIGO ORIGINAL ===
-    const epiData = { /* [mantido exatamente igual, omiti aqui só pra encurtar visualmente] */ };
+    // ================== SEU SCRIPT ORIGINAL ===================
 
     const tipoEpiSelect = document.getElementById("tipoEpi");
     const codigoEpiSelect = document.getElementById("codigoEpi");
@@ -100,6 +91,8 @@
     const searchCS = document.getElementById("searchCS");
     const tabelaSemanalBody = document.querySelector("#tabelaSemanal tbody");
     const form = document.getElementById("epiForm");
+
+    const epiData = { /* TODO: mantenha seu bloco completo de dados aqui */ };
 
     tipoEpiSelect.addEventListener("change", () => {
       codigoEpiSelect.innerHTML = "";
@@ -136,24 +129,21 @@
       }
     });
 
-    // === SALVAR LOCAL + NUVEM ===
-    async function salvarRegistroLocalENuvem(cs, tipoEpi, modelo, tamanho, codigo, motivo) {
-      const registro = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
-      // salva local
+    async function salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo) {
+      const novo = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
+
+      // Salva local
       const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
-      registros.push(registro);
+      registros.push(novo);
       localStorage.setItem("registrosEPI", JSON.stringify(registros));
-      // salva na nuvem
-      try {
-        await addDoc(collection(db, "registrosEPI"), registro);
-      } catch (e) {
-        console.error("Erro ao salvar no Firestore:", e);
-      }
-      alert("✅ Registro salvo!");
+
+      // Salva na nuvem
+      await addDoc(collection(db, "registrosEPI"), novo);
+      alert("✅ Registro salvo com sucesso!");
       atualizarListaRegistros();
     }
 
-    form.addEventListener("submit", (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const cs = document.getElementById("cs").value.trim();
       const tipoEpi = tipoEpiSelect.value;
@@ -162,19 +152,16 @@
       const [modelo, tamanho] = valor.split("|");
       const codigo = epiData[tipoEpi][modelo][tamanho];
       const motivo = document.getElementById("motivo").value.trim();
-      salvarRegistroLocalENuvem(cs, tipoEpi, modelo, tamanho, codigo, motivo);
+      await salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo);
       form.reset();
       codigoEpiSelect.disabled = true;
       codigoSelecionadoDiv.textContent = "";
     });
 
-    async function carregarDaNuvem() {
+    async function carregarRegistros() {
       const querySnapshot = await getDocs(collection(db, "registrosEPI"));
-      const registros = [];
-      querySnapshot.forEach((docSnap) => {
-        registros.push(docSnap.data());
-      });
-      localStorage.setItem("registrosEPI", JSON.stringify(registros));
+      const registrosNuvem = querySnapshot.docs.map(doc => doc.data());
+      localStorage.setItem("registrosEPI", JSON.stringify(registrosNuvem));
       atualizarListaRegistros();
     }
 
@@ -197,7 +184,8 @@
           <p><span class='label'>Modelo:</span> ${r.modelo}</p>
           <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
           <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
-          <p><span class='label'>Motivo:</span> ${r.motivo}</p>`;
+          <p><span class='label'>Motivo:</span> ${r.motivo}</p>
+        `;
         listaRegistros.appendChild(card);
       });
       atualizarResumoSemanal(filtrados);
@@ -224,9 +212,7 @@
     }
 
     searchCS.addEventListener("input", atualizarListaRegistros);
-
-    // 🔥 CARREGAR DADOS DA NUVEM AO INICIAR
-    carregarDaNuvem();
+    carregarRegistros();
   </script>
 </body>
 </html>
