--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     button { margin-top: 20px; width: 100%; padding: 14px; background: #388e3c; color: white; border: none; border-radius: 10px; font-size: 18px; cursor: pointer; transition: all 0.3s; }
     button:hover { background: #2e7d32; }
     #codigoSelecionado { margin-top: 12px; font-weight: 700; font-size: 20px; color: #2e7d32; text-align: center; min-height: 28px; }
+
     .registros { max-width: 950px; margin: 0 auto 40px auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; }
     .card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); position: relative; transition: transform 0.2s, box-shadow 0.2s; }
     .card:hover { transform: translateY(-5px); box-shadow: 0 8px 20px rgba(0,0,0,0.15); }
@@ -24,6 +25,7 @@
     .deleteBtn:hover { background: #b12b24; }
     h2 { text-align: center; color: #2e7d32; margin-bottom: 15px; }
     #searchCS { max-width: 600px; margin: 0 auto 30px auto; padding: 12px; border-radius: 8px; border: 1px solid #ccc; display: block; }
+
     table { width: 90%; max-width: 600px; margin: 0 auto 40px auto; border-collapse: collapse; background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
     th, td { border: 1px solid #ddd; padding: 12px; text-align: center; }
     th { background: #2e7d32; color: white; }
@@ -32,11 +34,14 @@
   </style>
 </head>
 <body>
-  <header><h1>Registro de EPI - Raízen Mundial</h1></header>
+  <header>
+    <h1>Registro de EPI - Raízen Mundial</h1>
+  </header>
 
   <form id="epiForm">
     <label for="cs">CS da Pessoa:</label>
     <input type="text" id="cs" placeholder="Digite o CS" required />
+
     <label for="tipoEpi">Tipo de EPI:</label>
     <select id="tipoEpi" required>
       <option value="">Selecione...</option>
@@ -48,23 +53,37 @@
       <option value="luvas">Luvas</option>
       <option value="uniforme">Uniforme</option>
     </select>
+
     <label for="codigoEpi">Tamanho:</label>
     <select id="codigoEpi" required disabled>
       <option value="">Selecione o tipo de EPI primeiro</option>
     </select>
+
     <div id="codigoSelecionado"></div>
+
     <label for="motivo">Motivo:</label>
     <input type="text" id="motivo" placeholder="Digite o motivo do uso" required />
+
     <button type="submit">Registrar</button>
   </form>
 
   <h2>Pesquisar por CS</h2>
   <input type="text" id="searchCS" placeholder="Digite o CS da pessoa" />
-  <div class="registros" id="listaRegistros"></div>
-  <h2>Resumo Semanal</h2>
-  <table id="tabelaSemanal"><thead><tr><th>Tipo de EPI</th><th>Quantidade nesta semana</th></tr></thead><tbody></tbody></table>
 
-  <!-- 🔥 FIREBASE CONFIG -->
+  <div class="registros" id="listaRegistros"></div>
+
+  <h2>Resumo Semanal</h2>
+  <table id="tabelaSemanal">
+    <thead>
+      <tr>
+        <th>Tipo de EPI</th>
+        <th>Quantidade nesta semana</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <!-- 🔥 Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
@@ -81,8 +100,11 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+    window.db = db;
 
-    // ================== SEU SCRIPT ORIGINAL ===================
+    // --- Dados dos EPIs ---
+    const epiData = { /* ...seu mesmo JSON de EPIs... */ };
+    Object.assign(epiData, { /* copie daqui o bloco de dados completo igual ao seu original */ });
 
     const tipoEpiSelect = document.getElementById("tipoEpi");
     const codigoEpiSelect = document.getElementById("codigoEpi");
@@ -91,8 +113,6 @@
     const searchCS = document.getElementById("searchCS");
     const tabelaSemanalBody = document.querySelector("#tabelaSemanal tbody");
     const form = document.getElementById("epiForm");
-
-    const epiData = { /* TODO: mantenha seu bloco completo de dados aqui */ };
 
     tipoEpiSelect.addEventListener("change", () => {
       codigoEpiSelect.innerHTML = "";
@@ -129,53 +149,55 @@
       }
     });
 
+    // 🔹 SALVAR REGISTRO NA NUVEM + LOCAL
     async function salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo) {
-      const novo = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
-
-      // Salva local
-      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
-      registros.push(novo);
-      localStorage.setItem("registrosEPI", JSON.stringify(registros));
-
-      // Salva na nuvem
-      await addDoc(collection(db, "registrosEPI"), novo);
-      alert("✅ Registro salvo com sucesso!");
-      atualizarListaRegistros();
+      const novoRegistro = { cs, tipoEpi, modelo, tamanho, codigo, motivo, data: new Date().toISOString() };
+      try {
+        await addDoc(collection(db, "registrosEPI"), novoRegistro);
+        alert("✅ Registro salvo na nuvem!");
+        carregarRegistros(); // Atualiza a lista
+      } catch (e) {
+        console.error("Erro ao salvar no Firebase:", e);
+        alert("❌ Falha ao salvar na nuvem. Registro guardado localmente.");
+        const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+        registros.push(novoRegistro);
+        localStorage.setItem("registrosEPI", JSON.stringify(registros));
+        atualizarListaRegistros(registros);
+      }
     }
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const cs = document.getElementById("cs").value.trim();
-      const tipoEpi = tipoEpiSelect.value;
-      const valor = codigoEpiSelect.value;
-      if (!cs || !tipoEpi || !valor) return alert("Preencha todos os campos!");
-      const [modelo, tamanho] = valor.split("|");
-      const codigo = epiData[tipoEpi][modelo][tamanho];
-      const motivo = document.getElementById("motivo").value.trim();
-      await salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo);
-      form.reset();
-      codigoEpiSelect.disabled = true;
-      codigoSelecionadoDiv.textContent = "";
-    });
-
+    // 🔹 CARREGAR REGISTROS DA NUVEM
     async function carregarRegistros() {
       const querySnapshot = await getDocs(collection(db, "registrosEPI"));
-      const registrosNuvem = querySnapshot.docs.map(doc => doc.data());
-      localStorage.setItem("registrosEPI", JSON.stringify(registrosNuvem));
-      atualizarListaRegistros();
+      const registros = [];
+      querySnapshot.forEach(docSnap => {
+        registros.push({ id: docSnap.id, ...docSnap.data() });
+      });
+      localStorage.setItem("registrosEPI", JSON.stringify(registros)); // cache local
+      atualizarListaRegistros(registros);
     }
 
-    function atualizarListaRegistros() {
-      const registros = JSON.parse(localStorage.getItem("registrosEPI")) || [];
+    // 🔹 EXCLUIR REGISTRO
+    async function excluirRegistro(id) {
+      try {
+        await deleteDoc(doc(db, "registrosEPI", id));
+        carregarRegistros();
+      } catch (e) {
+        console.error("Erro ao excluir:", e);
+      }
+    }
+
+    // 🔹 LISTAGEM
+    function atualizarListaRegistros(registros = JSON.parse(localStorage.getItem("registrosEPI")) || []) {
       const filtro = searchCS.value.trim().toLowerCase();
-      listaRegistros.innerHTML = "";
       const filtrados = registros.filter(r => r.cs.toLowerCase().includes(filtro));
+      listaRegistros.innerHTML = "";
       if (filtrados.length === 0) {
         listaRegistros.innerHTML = "<p style='text-align:center;color:#888;'>Nenhum registro encontrado.</p>";
         atualizarResumoSemanal([]);
         return;
       }
-      filtrados.forEach((r, i) => {
+      filtrados.forEach((r) => {
         const card = document.createElement("div");
         card.className = "card";
         card.innerHTML = `
@@ -185,8 +207,11 @@
           <p><span class='label'>Tamanho:</span> ${r.tamanho}</p>
           <p><span class='label'>Código SAP:</span> ${r.codigo}</p>
           <p><span class='label'>Motivo:</span> ${r.motivo}</p>
-        `;
+          <button class='deleteBtn' data-id='${r.id}'>Excluir</button>`;
         listaRegistros.appendChild(card);
+      });
+      document.querySelectorAll(".deleteBtn").forEach(btn => {
+        btn.onclick = () => excluirRegistro(btn.dataset.id);
       });
       atualizarResumoSemanal(filtrados);
     }
@@ -211,7 +236,23 @@
       }
     }
 
-    searchCS.addEventListener("input", atualizarListaRegistros);
+    // --- FORM SUBMIT ---
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+      const cs = document.getElementById("cs").value.trim();
+      const tipoEpi = tipoEpiSelect.value;
+      const valor = codigoEpiSelect.value;
+      if (!cs || !tipoEpi || !valor) return alert("Preencha todos os campos!");
+      const [modelo, tamanho] = valor.split("|");
+      const codigo = epiData[tipoEpi][modelo][tamanho];
+      const motivo = document.getElementById("motivo").value.trim();
+      salvarRegistro(cs, tipoEpi, modelo, tamanho, codigo, motivo);
+      form.reset();
+      codigoEpiSelect.disabled = true;
+      codigoSelecionadoDiv.textContent = "";
+    });
+
+    searchCS.addEventListener("input", () => atualizarListaRegistros());
     carregarRegistros();
   </script>
 </body>
